unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__BulkCapacity__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BulkCapacity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Batch Delivery Capacity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>