unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__ChildCountField__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ChildCountField__c</fullName>
    <description>The API name of the field on the target object that contains the number of child records associated with a target record.</description>
    <inlineHelpText>The API name of the field on the target object that contains the number of child records associated with a target record.</inlineHelpText>
    <label>Child Record Count Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>