unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__DeliverUsingBackgroundProcess__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DeliverUsingBackgroundProcess__c</fullName>
    <description>Determines whether messages are delivered using a background process when the sender specifies that they are to be delivered now rather than later. If messages are scheduled for delivery later, the messages are delivered using a background process and this setting has no effect. When Capacity is selected, messages are delivered using a background process if the number of messages to be delivered exceeds the value set in the Synchronous Delivery Capacity field. The default value is Never.</description>
    <inlineHelpText>Determines whether messages are delivered using a background process when the sender specifies that they are to be delivered now.</inlineHelpText>
    <label>Deliver Using Background Process</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
                <default>true</default>
                <label>Never</label>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>