unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__DeliveryOrder__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DeliveryOrder__c</fullName>
    <defaultValue>500</defaultValue>
    <description>The batch delivery system will attempt to deliver message types in ascending order of this field. It groups messages by type to improve scalability.</description>
    <label>Delivery Sequence Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>