unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__Describer__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Describer__c</fullName>
    <label>Describer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>