unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__HandlerData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__HandlerData__c</fullName>
    <label>Handler Data</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>