unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__Identifier__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Identifier__c</fullName>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>