unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__MaxChildCount__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MaxChildCount__c</fullName>
    <description>The maximum number of child records each target record can store before a new target record is created.</description>
    <inlineHelpText>The maximum number of child records each target record can store before a new target record is created.</inlineHelpText>
    <label>Maximum Child Records on Target</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>