unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__TargetObject__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TargetObject__c</fullName>
    <inlineHelpText>The object that will be modified based on messages received</inlineHelpText>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>