unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__Type__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Type__c</fullName>
    <description>The subscription process type.</description>
    <inlineHelpText>The subscription process type.</inlineHelpText>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>import</fullName>
                <label>Import</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>