unpackaged/main/default/objects/fferpcore__MessagingSubscription__c/fields/fferpcore__VirtualObjectConsumer__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VirtualObjectConsumer__c</fullName>
    <description>The name of the Consumer invoked whenever a VirtualDataObject is received.</description>
    <inlineHelpText>The name of the Consumer invoked whenever a VirtualDataObject is received.</inlineHelpText>
    <label>Consumer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>